--- a/view/visitor/signup.html
+++ b/view/visitor/signup.html
@@ -94,7 +94,7 @@
         <div class="control-group">
           <label class="control-label" for="password">Password</label>
           <div class="controls">
-            <input type="password" id="password" name="password" placeholder="Password">
+            <input type="password" id="password" placeholder="Password">
 
             <p class="description">At least 6 characters.</p>
           </div>
@@ -121,6 +121,7 @@
 </div>
 <script src="/static/libraries/jquery-1.10.1.min.js"></script>
 <script src="/static/libraries/bootstrap/js/bootstrap.min.js"></script>
-<script src="/static/scripts/account/create.js"></script>
+<script src="/static/libraries/hash.js"></script>
+<script src="/static/scripts/account/signup.js"></script>
 </body>
 </html>
