--- a/view/visitor/earn.html
+++ b/view/visitor/earn.html
@@ -17,10 +17,12 @@
     <div id="search">
       <input id="search-keyword" placeholder="Search" />
     </div>
-    <ul id="user-box"  class="pull-right">
+    <ul id="user-box" class="pull-right">
+      <li><a href="/signup">Sign up</a></li>
+      <li><a href="/login">Log in</a></li>
+    </ul>
+    <ul id="help-box" class="pull-right">
       <li><a id="help" href="#">Help</a></li>
-      <li><a href="signup">Sign up</a></li>
-      <li><a href="login">Log in</a></li>
     </ul>
   </div>
 </div>
