Improve user sign up and log in

--- a/view/visitor/login.html
+++ b/view/visitor/login.html
@@ -21,7 +21,7 @@
           <label class="checkbox">
             <input type="checkbox"> Remember me
           </label>
-          <button type="submit" class="btn">Log in</button>
+          <input id="submit-button" type="submit" class="btn" value="Log in">
         </div>
       </div>
     </form>
