--- a/static/stylesheets/user.less
+++ b/static/stylesheets/user.less
@@ -1,8 +1,10 @@
 #login-main {
   padding-top: 100px;
+  padding-bottom: 80px;
 }
 #signup-main {
   padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 #login-main, #signup-main {
