--- a/static/stylesheets/main.less
+++ b/static/stylesheets/main.less
@@ -327,7 +327,7 @@ em {
       border-radius: 4px;
       background: #DDD;
       .bar {
-        background: #99CC33;
+        background: #F60;
         height: 8px;
         border-radius: 4px;
       }
@@ -380,11 +380,11 @@ em {
       line-height: 26px;
       border-radius: 4px;
       text-align: center;
-      background: #F60;
+      background: #9C3;
       color: #FFF;
       &:hover{
         text-decoration: none;
-        background: #99CC33;
+        background: #6b8f24;
       }
     }
 
