--- a/static/stylesheets/admin-iframe.less
+++ b/static/stylesheets/admin-iframe.less
@@ -72,3 +72,7 @@ h1 {
     border-bottom: 1px solid #cdcdcd;
   }
 }
+
+.table-striped tbody>tr:nth-child(odd)>td, .table-striped tbody>tr:nth-child(odd)>th {
+  background-color:#f0f0f0;
+}
