--- a/view/admin/index.html
+++ b/view/admin/index.html
@@ -15,33 +15,33 @@
   </div>
   <ul id="top-nav" class="nav btn-group pull-right">
     <li class="btn btn-inverse top-nav-btn">
-      <a title="" href="#" class="top-nav-a">
+      <a title="" href="javascript:" class="top-nav-a">
         <i class="icon-white icon-user"></i>
         <span class="text">Profile</span>
       </a>
     </li>
     <li class="btn btn-inverse top-nav-btn">
-      <a title="" href="#" class="top-nav-a" data-toggle="dropdown">
+      <a title="" href="javascript:" class="top-nav-a" data-toggle="dropdown">
         <i class="icon-white icon-envelope"></i>
         <span class="text">Messages</span>
         <span class="label label-important">5</span>
         <span class="caret"></span>
       </a>
       <ul id="top-nav-dropdown" class="dropdown-menu">
-        <li><a tabindex="-1" href="#">Inbox</a></li>
-        <li><a tabindex="-1" href="#">New message</a></li>
+        <li><a tabindex="-1" href="javascript:">Inbox</a></li>
+        <li><a tabindex="-1" href="javascript:">New message</a></li>
         <li class="divider"></li>
-        <li><a tabindex="-1" href="#">Trash</a></li>
+        <li><a tabindex="-1" href="javascript:">Trash</a></li>
       </ul>
     </li>
     <li class="btn btn-inverse top-nav-btn">
-      <a title="" href="#" class="top-nav-a">
+      <a title="" href="javascript:" class="top-nav-a">
         <i class="icon-white icon-cog"></i>
         <span class="text">Settings</span>
       </a>
     </li>
     <li class="btn btn-inverse top-nav-btn">
-      <a title="" href="#" class="top-nav-a">
+      <a title="" href="javascript:" class="top-nav-a">
         <i class="icon-white icon-share-alt"></i>
         <span class="text">Log out</span>
       </a>
@@ -51,40 +51,46 @@
 <div id="sidebar">
   <ul id="menu">
     <li>
-      <a class="active" href="#">
+      <a class="active" href="javascript:" id="menu-dashboard">
         <i class="icon-white icon-home"></i>
         <span>Dashboard</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="javascript:" id="menu-accounts">
         <i class="icon-white icon-list-alt"></i>
         <span>Accounts</span>
         <span class="label label-inverse">7</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="javascript:">
         <i class="icon-white icon-gift"></i>
         <span>Funding projects</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="javascript:">
         <i class="icon-white icon-leaf"></i>
         <span>Volunteer projects</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="javascript:">
         <i class="icon-white icon-eye-open"></i>
         <span>Historical records</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="javascript:">
         <i class="icon-white icon-tasks"></i>
         <span>Statics</span>
+      </a>
+    </li>
+    <li>
+      <a href="javascript:">
+        <i class="icon-white icon-info-sign"></i>
+        <span>Help centre</span>
       </a>
     </li>
   </ul>
