--- a/view/admin/dashboard.html
+++ b/view/admin/dashboard.html
@@ -10,8 +10,7 @@
 <h1>Dashboard</h1>
 <div id="tabs">
   <a href="#" class="current">Home</a>
-  <a href="#">Page visits</a>
-  <a href="#">Account statistics</a>
+  <a href="#">System Status</a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
@@ -82,6 +81,5 @@
 </div>
 <script src="/static/libraries/jquery-1.10.1.min.js"></script>
 <script src="/static/libraries/bootstrap/js/bootstrap.min.js"></script>
-<script src="/static/scripts/admin/index.js"></script>
 </body>
 </html>
