--- a/view/admin/accountsLists.html
+++ b/view/admin/accountsLists.html
@@ -27,9 +27,9 @@
           <table class="table table-striped">
             <thead>
               <tr>
-                <td>#</td>
-                <td>Name</td>
-                <td>Saving</td>
+                <th>#</th>
+                <th>Name</th>
+                <th>Saving</th>
               </tr>
             </thead>
             <tbody>
