--- a/view/admin/accountsCreate.html
+++ b/view/admin/accountsCreate.html
@@ -9,10 +9,10 @@
 <body>
 <h1>Accounts</h1>
 <div id="tabs">
-  <a href="./accounts" class="current">Statics</a>
+  <a href="./accounts">Statics</a>
   <a href="./accountsSearch">Search</a>
   <a href="./accountsLists">Lists</a>
-  <a href="./accountsCreate">Create</a>
+  <a href="./accountsCreate" class="current">Create</a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
