--- a/view/admin/accountsLists.html
+++ b/view/admin/accountsLists.html
@@ -70,5 +70,11 @@
 </div>
 <script src="/static/libraries/jquery-1.10.1.min.js"></script>
 <script src="/static/libraries/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/scripts/admin/frame.js"></script>
+<script>
+  $(document).ready(function() {
+    
+  });
+</script>
 </body>
 </html>
