Add ajax loader

--- a/static/stylesheets/admin-iframe.less
+++ b/static/stylesheets/admin-iframe.less
@@ -76,3 +76,9 @@ h1 {
 .table-striped tbody>tr:nth-child(odd)>td, .table-striped tbody>tr:nth-child(odd)>th {
   background-color:#f0f0f0;
 }
+
+.ajax-loader {
+  background: url('/static/images/ajax-loader.gif') center no-repeat;
+  height: 15px;
+  display: block;
+}
