--- a/view/admin/accountsSearch.html
+++ b/view/admin/accountsSearch.html
@@ -9,9 +9,10 @@
 <body>
 <h1>Accounts</h1>
 <div id="tabs">
-  <a href="./accounts">Statics</a>
-  <a href="./accountsSearch" class="current">Search</a>
-  <a href="./accountsLists">Lists</a>
+  <a href="/admin?frame=accounts">Statics</a>
+  <a href="/admin?frame=accountsSearch" class="current">Search</a>
+  <a href="/admin?frame=accountsLists">Lists</a>
+  <a href="/admin?frame=accountsCreate">Create</a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
