--- a/view/visitor/signup.html
+++ b/view/visitor/signup.html
@@ -38,9 +38,9 @@
       </div>
 
       <div class="control-group">
-        <label class="control-label" for="id-type">Identity Document</label>
+        <label class="control-label" for="doc_type">Identity Document</label>
         <div class="controls">
-          <select id="id-type" name="id-type">
+          <select id="doc_type" name="doc_type">
             <option selected="selected" disabled="disabled">Please select...</option>
             <option value="1">NRIC (Singaporean or PR)</option>
             <option value="2">FIN (Foreigner)</option>
@@ -51,10 +51,10 @@
 
       <div class="control-group">
         <!--
-        <label class="control-label" for="id-info">Identity Information</label>
+        <label class="control-label" for="doc_info">Identity Information</label>
         -->
         <div class="controls">
-          <input type="text" id="id-info" name="id-info" placeholder="NRIC / FIN / Passport number">
+          <input type="text" id="doc_info" name="doc_info" placeholder="NRIC / FIN / Passport number">
           <p class="description">Eg. G123456789</p>
         </div>
       </div>
