--- a/static/stylesheets/admin-iframe.less
+++ b/static/stylesheets/admin-iframe.less
@@ -82,3 +82,16 @@ h1 {
   height: 15px;
   display: block;
 }
+
+#copyright {
+  padding-left: 30px;
+  margin-bottom: 10px;
+  p {
+    font-size: 12px;
+    margin: 0;
+    color: #888;
+  }
+  .small {
+    color: #BBB;
+  }
+}
