--- a/view/admin/accounts.html
+++ b/view/admin/accounts.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Admin Interface - Volunteer Connect Bank</title>
-  <link rel="stylesheet" href="/static/libraries/bootstrap/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/static/stylesheets/admin-iframe.css"/>
-</head>
-<body>
-<h1>Accounts</h1>
-<div id="tabs">
+{% extends "frame.html" %}
+{% block heading %}Accounts{% endblock %}
+{% block tabs %}
   <a href="/admin?frame=accounts" class="current">Statics</a>
   <a href="/admin?frame=accountsSearch">Search</a>
   <a href="/admin?frame=accountsLists">Lists</a>
   <a href="/admin?frame=accountsCreate">Create</a>
-</div>
-<div class="container-fluid">
+{% endblock %}
+{% block body %}
   <div class="row-fluid">
     <div class="span12">
       <div class="widget">
@@ -38,8 +30,4 @@
       </div>
     </div>
   </div>
-</div>
-<script src="/static/libraries/jquery-1.10.1.min.js"></script>
-<script src="/static/libraries/bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock %}
