--- a/view/admin/accountsLists.html
+++ b/view/admin/accountsLists.html
@@ -47,7 +47,7 @@
           <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Saving</th>
+            <th>Dates</th>
             <th></th>
           </tr>
           </thead>
@@ -61,14 +61,23 @@
 {% endblock %}
 {% block scripts %}
 <script>
-function getTableHtml(data) {
+function getDateString(timestamp) {
+  time = new Date(timestamp * 1000);
+  return time.toLocaleDateString() + " " + time.toLocaleTimeString();
+}
+
+function getTableHtml(data, type) {
   var tbody = '';
   for (var id in data) {
     var user = data[id]
     var tr = '';
     tr += '<td>'+ user['uid'].toString() + '</td>';
     tr += '<td>'+ user['firstname'] + ' <strong>' + user['lastname'] + '</strong></td>';
-    tr += '<td>' + '0.00' + '</td>';
+    if (type) {
+      tr += '<td>' + getDateString(user['create_time']) + '</td>';
+    } else {
+      tr += '<td>' + '0.00' + '</td>';
+    }
     tr += '<td><a href="/admin/display?m=account&uid=' + user['uid'].toString() + '">View</a></td>'
     tbody += '<tr>' + tr + '</tr>';
   }
@@ -90,7 +99,7 @@ $(document).ready(function() {
    */
   postData = {request: 'users', order: 'create_time DESC'};
   $.post('/admin/getData', postData, function(data) {
-    $('#list-by-date').html(getTableHtml(data));
+    $('#list-by-date').html(getTableHtml(data, 1));
   }, 'json');
 });
 </script>
