--- a/view/admin/displayAccount.html
+++ b/view/admin/displayAccount.html
@@ -17,6 +17,58 @@
         <h3>Account Details</h3>
       </div>
       <div class="content">
+        <table class="table table-bordered">
+          <tr>
+            <td>First Name</td>
+            <td>{{ user.firstname|e }}</td>
+          </tr>
+          <tr>
+            <td>Last Name</td>
+            <td>{{ user.lastname|e }}</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td>{{ user.email }}</td>
+          </tr>
+          <tr>
+            <td>Document Type</td>
+            <td>{{ user.doc_type }}</td>
+          </tr>
+          <tr>
+            <td>Document Information</td>
+            <td>{{ user.doc_info|e }}</td>
+          </tr>
+          <tr>
+            <td>Create Time</td>
+            <td>{{ user.create_time_string }}</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span6">
+    <div class="widget">
+      <div class="title">
+        <span class="icon">
+          <i class="icon-bookmark"></i>
+        </span>
+        <h3>Transfer Records</h3>
+      </div>
+      <div class="content">
+      </div>
+    </div>
+  </div>
+  <div class="span6">
+    <div class="widget">
+      <div class="title">
+        <span class="icon">
+          <i class="icon-bookmark"></i>
+        </span>
+        <h3>Login Records</h3>
+      </div>
+      <div class="content">
       </div>
     </div>
   </div>
