--- a/view/admin/displayAccount.html
+++ b/view/admin/displayAccount.html
@@ -31,6 +31,10 @@
             <td>{{ user.email }}</td>
           </tr>
           <tr>
+            <td>Phone</td>
+            <td>{{ user.phone }}</td>
+          </tr>
+          <tr>
             <td>Document Type</td>
             <td>{{ user.doc_type }}</td>
           </tr>
