--- a/view/admin/frame.html
+++ b/view/admin/frame.html
@@ -13,7 +13,7 @@
 <div id="tabs">{% block tabs %}{% endblock %}</div>
 <div id="body" class="container-fluid">{% block body %}{% endblock %}</div>
 <div id="copyright" class="container-fluid">
-  <p>Copyright &copy; 2013 VCBank</p>
+  <p>&copy; 2013 VCBank</p>
   <p class="small">* Information displayed in this page is only for authorized administrators.</p>
 </div>
 <script src="/static/libraries/jquery-1.10.1.min.js"></script>
