Add static method

--- a/view/admin/accounts.html
+++ b/view/admin/accounts.html
@@ -1,10 +1,10 @@
 {% extends "frame.html" %}
 {% block heading %}Accounts{% endblock %}
 {% block tabs %}
-  <a href="/admin?frame=accounts" class="current">Statics</a>
-  <a href="/admin?frame=accountsSearch">Search</a>
-  <a href="/admin?frame=accountsLists">Lists</a>
-  <a href="/admin?frame=accountsCreate">Create</a>
+  <a href="/admin/static?v=accounts" class="current">Statics</a>
+  <a href="/admin/static?v=accountsSearch">Search</a>
+  <a href="/admin/static?v=accountsLists">Lists</a>
+  <a href="/admin/static?v=accountsCreate">Create</a>
 {% endblock %}
 {% block body %}
   <div class="row-fluid">
