--- a/view/admin/index.html
+++ b/view/admin/index.html
@@ -96,7 +96,7 @@
   </ul>
 </div>
 <div id="content">
-  <iframe id="main-frame" src="/admin?frame=dashboard"></iframe>
+  <iframe id="main-frame" src="/admin/static?v=dashboard"></iframe>
 </div>
 <script src="/static/libraries/jquery-1.10.1.min.js"></script>
 <script src="/static/libraries/bootstrap/js/bootstrap.min.js"></script>
