--- a/view/admin/accountsCreate.html
+++ b/view/admin/accountsCreate.html
@@ -1,10 +1,10 @@
 {% extends "frame.html" %}
 {% block heading %}Accounts{% endblock %}
 {% block tabs %}
-<a href="/admin?frame=accounts">Statics</a>
-<a href="/admin?frame=accountsSearch">Search</a>
-<a href="/admin?frame=accountsLists">Lists</a>
-<a href="/admin?frame=accountsCreate" class="current">Create</a>
+<a href="/admin/static?v=accounts">Statics</a>
+<a href="/admin/static?v=accountsSearch">Search</a>
+<a href="/admin/static?v=accountsLists">Lists</a>
+<a href="/admin/static?v=accountsCreate" class="current">Create</a>
 {% endblock %}
 {% block body %}
 <div class="row-fluid">
